# ReAct

./: .env  .gitignore  README.md  eval_report.md  pyproject.toml  run_evaluation.py
logs/: 0045df3ca41b.json  062747479cd4.json  0734076f9805.json  16490524d921.json  1cf8e5595d82.json  212e6ed3fc85.json  216c31a50848.json  2369edf64deb.json  36afe6434bc4.json  3d94c6154e9c.json  4e6100f9f702.json  5a3ec1940e35.json  63faf564d6ba.json  771b5e2302cd.json  84d60c8f3004.json  95eddda2cf06.json  abdb2b4cf46b.json  aeca713fe905.json  cc39cf88fe31.json  d1a73ab7c28b.json  d1c020d5fda4.json  f65e881c6341.json  fe818151c8e6.json
src/: __init__.py  agent.py  config.py  llm.py  log_viewer.py  monitor.py  schemas.py  server.py  tools.py
static/: index.html
tests/: test_monitor.py  test_tools.py
